--- a/template.tex
+++ b/template.tex
@@ -9,9 +9,9 @@
 
 \pagestyle{fancy}
 \fancyhead{}
-\fancyhead[L]{Programmiersprachen 2}
-\fancyhead[C]{\"Ubungsblatt \numhw}
-\fancyhead[R]{Abgabe \deadline}
+\fancyhead[L]{Programming Languages 2}
+\fancyhead[C]{Homework \numhw}
+\fancyhead[R]{Deadline \deadline}
 
 \input{hw\numhw/hw\numhw.tex}
 \end{document}
