--- a/template.tex
+++ b/template.tex
@@ -2,6 +2,8 @@
 \usepackage[a4paper]{geometry}
 \usepackage{mathtools}
 \usepackage{fancyhdr}
+\usepackage{bussproofs}
+\usepackage{amssymb}
 
 \begin{document}
 \newcommand{\numhw}{NUMHW}
