--- a/template.tex
+++ b/template.tex
@@ -4,6 +4,12 @@
 \usepackage{fancyhdr}
 \usepackage{bussproofs}
 \usepackage{amssymb}
+\usepackage{tikz}
+\usepackage{hyperref}
+
+\hypersetup{colorlinks=true,
+  linkcolor=blue
+  }
 
 \begin{document}
 \newcommand{\numhw}{NUMHW}
