--- a/template.tex
+++ b/template.tex
@@ -15,6 +15,9 @@
 \newcommand{\numhw}{NUMHW}
 \newcommand{\deadline}{DEADLINE}
 
+\newtheorem{theorem}{Theorem}
+\newtheorem{proof}{Proof}
+
 \pagestyle{fancy}
 \fancyhead{}
 \fancyhead[L]{Programming Languages 2}
