--- a/template.tex
+++ b/template.tex
@@ -6,6 +6,7 @@
 \usepackage{amssymb}
 \usepackage{tikz}
 \usepackage{hyperref}
+\usepackage{stmaryrd}
 
 \hypersetup{colorlinks=true,
   linkcolor=blue
