--- a/hw07/hw07.tex
+++ b/hw07/hw07.tex
@@ -5,7 +5,7 @@ Do not use the unit type, as the only new term $\mathtt{unit}$ is already in nor
 \emph{Hint: extend defninitoin 12.1.2 and lammas 12.1.3-12.1.5 using the extended language, then the normalization theorem follows}
 
 \section{Bidirectional Typing}
-Consider the system for Bidirectional Typing of STLC from the lecture, with the following rules for applications
+Consider the system for Bidirectional Typing of STLC from the lecture, with the following rules for applications\\
 \begin{minipage}{\textwidth}
   \begin{minipage}{0.45\textwidth}
     \begin{prooftree}
@@ -14,8 +14,8 @@ Consider the system for Bidirectional Typing of STLC from the lecture, with the 
       \RightLabel{$\Rightarrow$\textsc{App}}
       \BinaryInfC{$\Gamma\vdash t_1\ t_2 \Rightarrow T_{12}$}
     \end{prooftree}
-    \hfill
   \end{minipage}
+  \hfill
   \begin{minipage}{0.45\textwidth}
     \begin{prooftree}
       \AxiomC{$\Gamma\vdash t_2 \Rightarrow T_{11}$}
@@ -33,13 +33,12 @@ Consider the system for Bidirectional Typing of STLC from the lecture, with the 
     $$ (\lambda f. \lambda x. f\ x)\ (\lambda y.y)\ \mathtt{unit}$$
   \item Pick an extension from TAPL 11.5-11.12. For each new typing rule
     \begin{enumerate}
-      \item State if the rule can be used for Inference, Checking or both in the bidirectional system (without adjusting the rule)
+      \item State if the rule can be used for Inference, Checking or both in the bidirectional system 
       \item Write down the corresponding bidirectional rule(s)
     \end{enumerate}
 \end{enumerate}
 
 \section{Constraint-based Typing}
-\subsubsection{}
 
 \begin{enumerate}
   \item Implement type reconstruction with Constraint-based Typing for STLC with the unit type 
