--- a/hw10/hw10.tex
+++ b/hw10/hw10.tex
@@ -3,7 +3,7 @@ Consider the following terms in system F with their given types
 \[
 \begin{array}{lcr}
 \mathtt{id} =\lambda X.\lambda x:X.x &:& \forall X.X\rightarrow X\\
-\mathtt{double} = \lambda X.\lambda f:X\rightarrow X.\lambda x:X. f\ (f\ a) &:& \forall X.(X\rightarrow X)\rightarrow X\rightarrow X\\
+\mathtt{double} = \lambda X.\lambda f:X\rightarrow X.\lambda a:X. f\ (f\ a) &:& \forall X.(X\rightarrow X)\rightarrow X\rightarrow X\\
 \mathtt{selfApp} = \lambda x:\forall X.X\rightarrow X. x\ [\forall X.X\rightarrow X]\ x &:& (\forall X.X\rightarrow X) \rightarrow (\forall X.X\rightarrow X)\\
 \mathtt{quadruple} = \lambda X.\mathtt{double}\ [X\rightarrow X]\ (\mathtt{double} [X]) &:&\forall X.(X\rightarrow X)\rightarrow X\rightarrow X
 \end{array}
