--- a/template.tex
+++ b/template.tex
@@ -7,11 +7,11 @@
 \usepackage{tikz}
 \usepackage{hyperref}
 \usepackage{stmaryrd}
+\usepackage{listings}
 
 \hypersetup{colorlinks=true,
   linkcolor=blue
   }
-
 \begin{document}
 \newcommand{\numhw}{NUMHW}
 \newcommand{\deadline}{DEADLINE}
